@@ -73,6 +73,7 @@ export(term_cols)
 export(term_count)
 export(uncovered)
 export(unnest_term_list)
+export(update_names)
 export(validate_model)
 export(weight)
 importFrom(data.table,":=")
